--- a/src/components/blocks/fav-app.json
+++ b/src/components/blocks/fav-app.json
@@ -2,7 +2,8 @@
   "collectionName": "components_blocks_fav_apps",
   "info": {
     "displayName": "Fav App",
-    "icon": "grid"
+    "icon": "grid",
+    "description": ""
   },
   "options": {},
   "attributes": {
@@ -13,14 +14,12 @@
       "type": "text"
     },
     "appImage": {
-      "allowedTypes": [
-        "images",
-        "files",
-        "videos",
-        "audios"
-      ],
       "type": "media",
-      "multiple": true
+      "multiple": true,
+      "required": false,
+      "allowedTypes": [
+        "images"
+      ]
     }
   }
 }
