--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@strapi/plugin-i18n": "4.24.1",
     "@strapi/plugin-users-permissions": "4.24.1",
     "@strapi/strapi": "4.24.1",
+    "axios": "^1.7.2",
     "better-sqlite3": "8.6.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
